2005-09-30  Benhur Stein <benhur@inf.ufsm.br>
        * General/PajeFilter.[hm]: change entity enumeration method to include
          minDuration hint
          (enumeratorOfEntitiesTyped:inContainer:fromTime:toTime:minDuration:)
        * EntityTypeFilter/EntityTypeSelector.[hm],
          FieldFilter/FieldFilter.[hm], ImbricationFilter/InsetLimit.[hm], 
          ReductionFilter/BusyNode.[hm], StatViewer/StatViewer.m: reflect change
        * SpaceTimeViewer/DrawView+{Drawing,Finding}.m: reflect change
        * SpaceTimeViewer/DrawView.h: add smallEntityWidth field to keep
          the width smaller than which entities should be aggregated;
          add SMALL_ENTITY_DURATION to convert width to time duration
        * SpaceTimeViewer/DrawView.m: read "SmallEntityWidth" from defaults

2005-09-30  Benhur Stein <benhur@inf.ufsm.br>
        * StorageController/AnchorFilter.[hm]: new class (from Encapsulate)
        * StorageController/Encapsulate.[hm]: split in AnchorFilter subclass
        * StorageController/GNUmakefile: add AnchorFilter

2005-09-30  Benhur Stein <benhur@inf.ufsm.br>
        * General/Association.[hm]: new class
        * General/CondensedEntitiesArray.[hm]: new class
        * General/GNUmakefile: include new classes
        * PajeSimulator/UserState.[hm]: add innerStates and
          condensedEntitiesCount variables;
          add addInnerState: method; 
          add accessor methods condensedEntities,
          condensedEntitiesCount, subCount, subColorAtIndex:,
          subDurationAtIndex:
        * PajeSimulator/SimulContainer.m: add inner states to states

2005-09-29  Benhur Stein <benhur@inf.ufsm.br>
        * General/PajeEntity.[hm]: change duration type to double, add
          exclusiveDuration method
        * General/PajeEntityInspector.m: reflect type change; show
          exclusiveDuration if not 0
        * General/PajeFilter.[hm]: durationForEntity: is double now
        * General/Protocols.h: duration is double too